<?xml version="1.0" encoding="UTF-8"?>
<!-- ====================================================
         Maven 2 project configuration file
         http://maven.apache.org/maven2/
     ==================================================== -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.opengis</groupId>
    <artifactId>geoapi-parent</artifactId>
    <version>3.0.3-SNAPSHOT</version>
  </parent>



  <!-- ====================================================
           Project description
       ==================================================== -->
  <groupId>org.opengis</groupId>
  <artifactId>tools</artifactId>
  <packaging>jar</packaging>
  <name>Processing tools</name>
  <description>
    Javadoc taglets and annotation processing tools for processing GeoAPI
    after compilation. Those tools are used mostly for javadoc generation.
  </description>



  <!-- ====================================================
           Developers and contributors
       ==================================================== -->
  <developers>
    <developer>
      <id>desruisseaux</id>
      <name>Martin Desruisseaux</name>
      <email>martin.desruisseaux@geomatys.com</email>
      <organization>Geomatys</organization>
      <organizationUrl>http://www.geomatys.com</organizationUrl>
      <roles>
        <role>Java developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
  </developers>



  <!-- ====================================================
           Dependencies
       ==================================================== -->
  <dependencies>
    <dependency>
      <groupId>org.opengis</groupId>
      <artifactId>geoapi</artifactId>
      <version>${project.version}</version>
    </dependency>
  </dependencies>



  <!-- ====================================================
           Plugins configuration
       ==================================================== -->
  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

</project>
